--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -2,7 +2,7 @@
 
 <ul class="nav nav-pills">
 	<li role="presentation" class="active"><a href="#">Home</a></li>
-	<li role="presentation"><a href="#">Find Projects</a></li>
+	<li role="presentation"><a href="../bids">Find Projects</a></li>
 	<li role="presentation"><a href="../teams" data-no-turbolink="true">Browse Teams</a></li>
 	<li role="presentation"><a href="#">Messages</a></li>
 	<li role="presentation">
