Routed some links to a more logical result

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -6,7 +6,7 @@
 	<li role="presentation"><a href="../teams" data-no-turbolink="true">Browse Teams</a></li>
 	<li role="presentation"><a href="#">Messages</a></li>
 	<li role="presentation">
-		<%= link_to 'Back', students_path %>
+		<%= link_to 'Back', login_path %>
 	</li>
 </ul><br />
 
