--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
 <table class = "center">
 	<tr>
 		<td>
-      <div class = "user-type"> Student </div>
+      <%= link_to 'Students', students_path, :class => "user-type" %>
 		</td>
 
 		<td>
