fixed sponsor button on homepage, added cucumber tests

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
 		</td>
 
 		<td>
-      <div class = "user-type"> Sponsor </div>
+      <%= link_to 'Sponsors', projects_path, :class => "user-type" %>
 		</td>
 
 		<td>
